# codeatlas

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_messages_created_at_clock_timestamp.py
backend/app/: main.py
backend/app/agent/: graph.py  state.py
backend/app/agent/nodes/: assess_sufficiency.py  call_tool.py  cite_sources.py  classify_intent.py  error_handler.py  finalize.py  generate_answer.py  rerank.py  retrieve_context.py  rewrite_query.py  tool_router.py
backend/app/agent/tools/: get_file_tool.py  get_git_blame_tool.py  run_search_tool.py
backend/app/api/: deps.py
backend/app/api/middleware/: correlation_id.py  error_handling.py  rate_limit.py
backend/app/api/routers/: auth.py  conversations.py  docs.py  health.py  repositories.py  search.py  workspaces.py
backend/app/api/schemas/: auth.py  common.py  conversation.py  docs.py  repository.py  search.py  workspace.py
backend/app/api/streaming/: events.py  redis_progress_bridge.py  sse.py
backend/app/application/services/: fusion.py  repository_walker.py  retrieval_service.py
backend/app/core/: config.py  constants.py  di.py  logging.py  security.py
backend/app/core/observability/: health_checks.py  instrumentation.py  metrics.py
backend/app/domain/: exceptions.py
backend/app/domain/entities/: chunk.py  conversation.py  file.py  indexing_job.py  message.py  refresh_token.py  repository.py  user.py  workspace.py
backend/app/domain/ports/: chunk_repository.py  conversation_repository.py  conversation_summary_dispatcher.py  embedding_port.py  file_repository.py  git_port.py  indexing_job_repository.py  indexing_task_dispatcher.py  llm_port.py  message_repository.py  refresh_token_repository.py  repository_repository.py  reranker_port.py  token_blacklist.py  user_repository.py  vector_store_port.py  workspace_repository.py
backend/app/domain/value_objects/: chunk_upsert_item.py  clone_result.py  embedding_result.py  llm_completion_result.py  ranked_chunk.py  retrieval_query.py  search_result.py  token_pair.py
backend/app/infrastructure/cache/: redis_client.py  redis_token_blacklist.py
backend/app/infrastructure/chunking/: _line_window.py  ast_chunker.py  chunk_merger.py  models.py  pipeline.py  semantic_chunker.py  (+1 more)
backend/app/workers/: celery_app.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py
backend/tests/unit/: test_health_endpoint.py  test_main.py
(+267 files in other folders)
