[project]
name = "codeatlas-backend"
version = "0.1.0"
description = "CodeAtlas backend — AI software engineering copilot powered by RAG"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.14,<2",
    "celery>=5.4,<6",
    "redis>=5.2,<6",
    "qdrant-client>=1.12,<2",
    "langgraph>=0.2,<0.3",
    "structlog>=24.4,<25",
    "argon2-cffi>=23.1,<24",
    "pyjwt>=2.9,<3",
    "httpx>=0.27,<0.28",
    "email-validator>=2.2,<3",
    "gitpython>=3.1,<4",
    "tree-sitter>=0.23,<0.24",
    "tree-sitter-python>=0.23,<0.24",
    "tree-sitter-javascript>=0.23,<0.24",
    "tree-sitter-typescript>=0.23,<0.24",
    "tokenizers>=0.20,<0.24",
    "FlagEmbedding>=1.3,<2",
    "sentence-transformers>=3.2,<4",
    "jinja2>=3.1,<4",
    "tenacity>=9.0,<10",
    "prometheus-fastapi-instrumentator>=7.0,<8",
    "pathspec>=0.12,<1",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=6.0,<7",
    "ruff>=0.7,<0.8",
    "black>=24.10,<25",
    "mypy>=1.13,<2",
    "pre-commit>=4.0,<5",
    "testcontainers>=4.8,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["app.domain.*", "app.application.*"]
strict = true

[[tool.mypy.overrides]]
# celery ships no py.typed marker / stubs.
module = ["celery.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# FlagEmbedding ships no py.typed marker. tokenizers>=0.23 does, but
# transformers (a FlagEmbedding dependency) pins it down to 0.22.x here,
# which — verified directly against the installed package — dropped the
# py.typed marker that 0.23.1 had.
module = ["FlagEmbedding.*", "tokenizers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring real infrastructure (Postgres/Qdrant/Redis)",
]
